# nyx-engine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/nyx/: assert.h  base.h  log.h  math.h  nyx.h  types.h
engine/include/nyx/events/: event.h  key_codes.h  key_codes.inl
engine/include/nyx/input/: mouse.h
engine/include/nyx/math/: constants.h  matrix4x4.h  matrix4x4.inl  matrix_func.h  matrix_func.inl  matrix_transform.h  matrix_transform.inl  quaternion.h  quaternion.inl  quaternion_func.h  quaternion_func.inl  vector2.h  vector2.inl  vector3.h  vector3.inl  vector4.h  vector4.inl  vector_func.h  vector_func.inl
engine/include/nyx/string/: string_util.h
engine/include/nyx/system/: app.h  window.h
engine/res/shaders/: default.hlsl
engine/src/: CMakeLists.txt  init.cpp
engine/src/platform/msw/: msw.h  window_impl.cpp  window_impl.h
engine/src/rendering/: renderer.cpp  renderer.h  renderer_impl.cpp  renderer_impl.h
engine/src/rendering/d3d12/: exception.h  renderer_impl.cpp  renderer_impl.h
engine/src/string/: string_util.cpp
engine/src/system/: app.cpp  window.cpp  window_impl.cpp  window_impl.h
engine/src/system/msw/: code_translation.cpp  msw.h  string_util.cpp  window_impl.cpp  window_impl.h
engine/tests/: CMakeLists.txt
engine/tests/math/: matrix4x4.cpp  matrix_func.cpp  matrix_transform.cpp  quaternion.cpp  vector2.cpp  vector3.cpp  vector4.cpp  vector_func.cpp
engine/tests/platform/msw/: string_util.cpp
engine/tests/string/: string_util.cpp
examples/hello-world/: CMakeLists.txt
examples/hello-world/src/: hello-world.cpp
include/nyx/: app.h  assert.h  event.h  events.h  init.h  input.h  log.h  nyx.h  system.h  window.h
include/nyx/events/: event.inl  event_data.h  key_codes.h  mouse_codes.h
include/nyx/math/: common.h  constants.h  trigonometric.h  vector2.h  vector2.inl  vector3.h  vector3.inl  vector4.h  vector4.inl  vector_func.h  vector_func.inl
include/nyx/system/: window.h
src/: CMakeLists.txt  app.cpp  init.cpp
src/platform/msw/: code_translation.h  init.cpp  msw.h  string_util.h  window.cpp  window.h
src/system/: app.cpp  window.cpp  window_impl.cpp  window_impl.h
tests/: CMakeLists.txt
tests/math/: vector2.cpp  vector4.cpp  vector_func.cpp
tests/platform/msw/: string_util.cpp
